# point-formats

./: .gitignore  Cargo.toml  LICENSE-APACHE  MIGRATION_REPORT.md  README.md
examples/: check_copc.rs  check_e57.rs  check_las.rs  convert.rs
src/: convert.rs  error.rs  format.rs  lib.rs  main.rs  quantizer.rs  streaming.rs  types.rs
src/adapters/: mod.rs
src/io/: asciigrid.rs  copc.rs  delimited.rs  dxf.rs  e57.rs  geojson.rs  geotiff.rs  gltf.rs  gpkg.rs  las.rs  mod.rs  obj.rs  pcd.rs  ply.rs  pts.rs  ptx.rs  robotics.rs  sensor.rs  shapefile.rs  stl.rs
tests/: coverage.rs  roundtrip.rs
