[package]
name = "lidar-format-convert"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["OpenAI"]
license = "MIT OR Apache-2.0"
description = "Dependency-light LiDAR/point-cloud/mesh format conversion crate with explicit adapters for heavyweight formats."
keywords = ["lidar", "point-cloud", "ply", "pcd", "las"]
categories = ["science::geo", "encoding", "command-line-utilities"]
readme = "README.md"

[lib]
name = "lidar_format_convert"
path = "src/lib.rs"

[[bin]]
name = "lidar-convert"
path = "src/main.rs"

[features]
default = []
# Optional native conversions using external crates
las = ["dep:las"]
laz = ["las", "las/laz"]
copc = ["dep:copc-rs"]
e57 = ["dep:e57"]
geospatial = ["dep:tiff", "dep:geojson", "dep:serde_json", "shapefile", "gpkg"]
robotics = []
vendor = ["dep:dxf", "gltf"]
dxf = ["dep:dxf"]
shapefile = ["dep:shapefile", "dep:dbase"]
gltf = ["dep:gltf", "dep:serde_json"]
gpkg = ["dep:rusqlite"]

[dependencies]
las = { version = "=0.9.4", optional = true }
copc-rs = { version = "0.5.0", optional = true }
e57 = { version = "0.11.12", optional = true }
tiff = { version = "0.11.3", optional = true }
geojson = { version = "1.0.0", optional = true }
serde_json = { version = "1.0", optional = true }
dxf = { version = "0.6.1", optional = true }
shapefile = { version = "0.8.0", optional = true }
dbase = { version = "0.7.0", optional = true }
gltf = { version = "1.4.1", default-features = false, features = ["import", "utils"], optional = true }
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]

