[package]
name = "point-formats"
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
authors = ["Yehor Smoliakov <egorsmkv@gmail.com>"]
license = "MIT"
repository = "https://github.com/RustedBytes/point-formats"
description = "Dependency-light LiDAR/point-cloud/mesh format conversion crate with explicit adapters for heavyweight formats."
keywords = ["lidar", "point-cloud", "ply", "pcd", "las"]
categories = ["science::geo", "encoding", "command-line-utilities"]
readme = "README.md"

[lib]
name = "point_formats"
path = "src/lib.rs"

[[bin]]
name = "lidar-convert"
path = "src/main.rs"

[[example]]
name = "check_e57"
required-features = ["e57"]

[[example]]
name = "check_copc"
required-features = ["copc"]

[[example]]
name = "check_las"
required-features = ["las"]

[features]
default = []
# Optional native conversions using external crates
las = ["dep:las"]
laz = ["las", "las/laz"]
copc = ["dep:copc-rs"]
e57 = ["dep:e57"]
geospatial = ["dep:tiff", "dep:geojson", "dep:serde_json", "shapefile", "gpkg"]
robotics = ["dep:rusqlite"]
vendor = ["dep:dxf", "gltf"]
dxf = ["dep:dxf"]
shapefile = ["dep:shapefile", "dep:dbase"]
gltf = ["dep:gltf", "dep:serde_json"]
gpkg = ["dep:rusqlite"]
sensor = []


[dependencies]
las = { version = "=0.9.4", optional = true }
copc-rs = { version = "0.5.0", optional = true }
e57 = { version = "0.11.12", optional = true }
tiff = { version = "0.11.3", optional = true }
geojson = { version = "1.0.0", optional = true }
serde_json = { version = "1.0", optional = true }
dxf = { version = "0.6.1", optional = true }
shapefile = { version = "0.8.0", optional = true }
dbase = { version = "0.7.0", optional = true }
gltf = { version = "1.4.1", default-features = false, features = ["import", "utils"], optional = true }
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
uuid = { version = "1.20", features = ["v4"] }

[dev-dependencies]

